Ensure that the full label is always visible for Radios

--- a/assets/src/scss/admin/fields/_field-radio.scss
+++ b/assets/src/scss/admin/fields/_field-radio.scss
@@ -10,7 +10,6 @@
   position: relative;
   cursor: pointer;
   transition: background 150ms;
-  height: 30px;
 
   &:hover {
     background: darken(#fff, 5%);
@@ -57,7 +56,6 @@
     font-weight: bold;
     padding: 0 0.5em;
     border-left: 1px solid #DFDFDF;
-    height: 30px;
     line-height: 30px;
     box-sizing: border-box;
   }
